bg video breakpoint whitespace fix

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -8488,6 +8488,10 @@ body:not(.features--show-image-zooming) .Image--lazyLoaded.Image--zoomOut {
   min-height: 480px;
 }
 
+[data-section-type='background-video'] .ImageHero--large {
+  min-height: 80vw;
+}
+
 .ImageHero__ImageWrapper,
 .ImageHero__Image {
   position: absolute;
@@ -8612,6 +8616,10 @@ body:not(.features--show-image-zooming) .Image--lazyLoaded.Image--zoomOut {
     min-height: 500px;
   }
 
+  [data-section-type='background-video'] .ImageHero--large {
+    min-height: 56vw;
+  }
+
   .ImageHero iframe {
     width: 100%;
     height: 200%;
@@ -8648,6 +8656,10 @@ body:not(.features--show-image-zooming) .Image--lazyLoaded.Image--zoomOut {
 
   .ImageHero--small {
     min-height: 450px;
+  }
+
+  [data-section-type='background-video'] .ImageHero--large {
+    min-height: 56vw;
   }
 
   .ImageHero--large {
